Add in home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,3 +3,5 @@
      <textarea cols="100" rows="100" name="usertext"></textarea>
      <br><br>
      <input type="submit" value="reverse">	
+
+<p>something</p>
