--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
-<h1> 0 hi 1 <h1>
-<form>
-     <textarea cols="100" rows="100" name="usertext"></textarea>
+<h1> 0 hi 1 </h1>
+<form action="{% url 'reverse' %}">
+     <textarea cols="20" rows="20" name="usertext"></textarea>
      <br><br>
-     <input type="submit" value="reverse">	
+     <input type="submit" value="Reverse!">	
+</form>
 
-<p>something</p>
